test-data/invalid/multiple-plural.jsx
const Test = () => (
    <PluralTranslate>
        <Plural />
        <Plural />
    </PluralTranslate>
);
